(image/editor) Raise z-index of fixed form footer

--- a/src/app/styles/_wizard.scss
+++ b/src/app/styles/_wizard.scss
@@ -93,7 +93,7 @@
 
   .form-actions.fixed {
     position: fixed;
-    z-index: 1000;
+    z-index: 1001;
     left: 0;
     bottom: 0;
     display: flex;
